--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div class="A4"></div>
+  <div id="A4"></div>
   <script src="./drawSvg.js"></script>
   <script>
-    const el = document.getElementsByClassName('A4')[0]
+    const el = document.getElementById('A4')
     const originData = { // 原始数据
       title: 'xxxx医院体温单',
       baseInfo: [
