modify:修改js文件名

--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>体温单</title>
   <link rel="stylesheet" href="style.css">
+  <script src="temperatureChart.js"></script>
 </head>
 <body>
   <div id="A4"></div>
-  <script src="./drawSvg.js"></script>
   <script>
     const el = document.getElementById('A4')
     const originData = { // 原始数据
