--- a/index.html
+++ b/index.html
@@ -10,9 +10,12 @@
 </head>
 <body>
   <div id="A4"></div>
+  <button onclick="destory()">销毁</button>
+  <button onclick="update()">更新</button>
   <script>
     const el = document.getElementById('A4')
-    const originData = {
+    let dataFlag = false
+    const originData1 = {
       /* ↓ 标题 */
       title: 'xxxx医院体温单',
       /* ↓ 基本信息，注：宽度超出一行会自动换 */
@@ -121,7 +124,110 @@
         ['2021-12-06 16:12:00', '手术分娩—十六时十二分']
       ]
     }
-    const chart = new TemperatureChart(el, originData)
+    const originData2 = {
+      title: 'xxxx医院体温单',
+      baseInfo: [
+        { label: '姓名', value: '李四' },
+        { label: '年龄', value: '24' },
+        { label: '科别', value: '内科' },
+        { label: '床号', value: '002' },
+        { label: '住院病历号', value: '123457' },
+        { label: '入院日期', value: '2021-12-01' }
+      ],
+      tableHeadData: [
+        { '日期': ['2021-12-01', '2021-12-02', '2021-12-03', '2021-12-04', '2021-12-05', '2021-12-06', '2021-12-07'] },
+        { '住院日数': ['1', '2', '3', '4', '5', '6', '7'] },
+        { '手术或产后日数': ['', '', '', '', '', '', ''] }
+      ],
+      tableFootData: [
+        { '呼吸(次/分)': [
+          ['',30,20,30,30,20],
+          ['',30,'',30,30,20],
+          [20,'','','','',20],
+          ['','','','','',''],
+          ['','','','','',''],
+          [20,30,20,30,30,20],
+          ['','','','','',25]
+        ]},
+        { '血压(mmHg)': [
+          ['138/87', '138/87'],
+          ['', '138/87'],
+          ['138/87', '138/87'],
+          ['138/87', ''],
+          ['138/87', '138/87'],
+          ['138/87', '138/87'],
+          ['138/87', '138/87']
+        ] },
+        { '总入液量(ml)': ['', '', '', '', '', '', ''] },
+        { '大便(次)': ['1', '2', '2', '3', '1', '2', '2'] },
+        { '尿量(ml)': ['', '', '', '', '', '', ''] },
+        { '其它排出量': ['', '', '', '', '', '', ''] },
+        { '体重(kg)': ['', '', '', '', '', '', ''] },
+        { '皮试': ['', '', '', '', '', '', ''] },
+        { '血糖(mmol/L)': ['', '', '', '', '', '', ''] },
+        { '其它': ['', '', '', '', '', '', ''] }
+      ],
+      mouthTemperature: [
+        ['2021-12-01 04:00:01',36.1],
+        ['2021-12-02 00:00:00',36.3],
+        ['2021-12-03 12:00:00',36.5],
+        ['2021-12-04 16:00:00',37.1],
+        ['2021-12-05 20:00:00',37],
+        ['2021-12-06 23:59:59',37.9],
+        ['2021-12-07 24:00:00',36.2]
+      ],
+      armpitTemperature: [
+        ['2021-12-01 16:00:00',38.1],
+        ['2021-12-02 16:00:00',38],
+        ['2021-12-03 16:00:00',37.5],
+        ['2021-12-04 16:00:00',37.8],
+        ['2021-12-05 16:00:00',37.4],
+        ['2021-12-06 16:00:00',37.8],
+        ['2021-12-07 16:00:00',36.7]
+      ],
+      anusTemperature: [
+        ['2021-12-01 04:00:00',37.4],
+        ['2021-12-02 08:00:00',37.1],
+        ['2021-12-03 12:00:00',37.2],
+        ['2021-12-04 16:00:00',38.3],
+        ['2021-12-05 20:00:00',38.1],
+        ['2021-12-06 24:00:00',38.4],
+        ['2021-12-07 16:00:00',40]
+      ],
+      pulseFrequency: [
+        ['2021-12-01 08:00:00',130],
+        ['2021-12-02 08:00:00',140],
+        ['2021-12-03 08:00:00',124],
+        ['2021-12-04 08:00:00',124],
+        ['2021-12-05 08:00:00',110],
+        ['2021-12-06 08:00:00',118],
+        ['2021-12-07 16:00:00',140]
+      ],
+      heartFrequency: [
+        ['2021-12-01 08:00:00',110],
+        ['2021-12-02 08:00:00',130],
+        ['2021-12-03 08:00:00',120],
+        ['2021-12-04 08:00:00',110],
+        ['2021-12-05 08:00:00',110],
+        ['2021-12-06 08:00:00',118],
+        ['2021-12-07 16:00:00',140]
+      ],
+      textRemarks: [
+        ['2021-12-01 08:00:00', '手术入院—八时零分'],
+        ['2021-12-02 08:00:00', '手术'],
+        ['2021-12-06 08:00:00', '分娩'],
+        ['2021-12-06 12:00:00', '手术'],
+        ['2021-12-06 16:12:00', '手术分娩—十六时十二分']
+      ]
+    }
+    const chart = new TemperatureChart(el, originData1)
+    function destory() {
+      chart.destory()
+    }
+    function update() {
+      dataFlag = !dataFlag
+      chart.update(dataFlag ? originData1 : originData2)
+    }
   </script>
 </body>
 </html>
